[tool.poetry]
name = "quiz"
version = "0.1.0"
description = "Quiz is a Online q&a platform with Flask."
authors = ["huangkai"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
celery = {version = "5.2.2", extras = ["auth", "eventlet", "py-amqp", "msgpack", "redis"]}
flask-cors = "3.0.2"
flask-httpauth = "3.3.0"
flask-mail = "0.9.1"
flask-migrate = "2.5.2"
flask-sqlalchemy = "2.4.0"
flower = "0.9.3"
gevent = "1.4.0"
jsonschema = {version = "3.0.1", extras = ["format"]}
pyjwt = "1.7.1"
python-dotenv = "0.10.2"
sentry-sdk = {version = "0.10.0", extras = ["flask"]}
wtforms = "2.2.1"
flask = "1.1.1"
mysqlclient = "1.4.6"

[tool.poetry.dev-dependencies]

[tool.black]
skip-string-normalization = true

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"